--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <nav id="desktop-nav">
-      <div class="logo">John Doe</div>
+      <div class="logo">Rasel Rana</div>
       <div>
         <ul class="nav-links">
           <li><a href="#about">About</a></li>
@@ -38,20 +38,21 @@
     </nav>
     <section id="profile">
       <div class="section__pic-container">
-        <img src="./assets/profile-pic.png" alt="John Doe profile picture" />
+        <!-- <img src="./assets/profile-pic.png" alt="John Doe profile picture" /> -->
+        <img src="./assets/banner.jpg" alt="John Doe profile picture" />
       </div>
       <div class="section__text">
         <p class="section__text__p1">Hello, I'm</p>
-        <h1 class="title">John Doe</h1>
+        <h1 class="title">Rasel Rana</h1>
         <p class="section__text__p2">Frontend Developer</p>
         <div class="btn-container">
           <button
             class="btn btn-color-2"
-            onclick="window.open('./assets/resume-example.pdf')"
+            onclick="window.open('./assets/Resume-of-Md-Rasel-Rana.pdf')"
           >
             Download CV
           </button>
-          <button class="btn btn-color-1" onclick="location.href='./#contact'">
+          <button class="btn btn-color-1" onclick="location.href='#contact'">
             Contact Info
           </button>
         </div>
@@ -60,13 +61,13 @@
             src="./assets/linkedin.png"
             alt="My LinkedIn profile"
             class="icon"
-            onclick="location.href='https://linkedin.com/'"
+            onclick="location.href='https:/www.linkedin.com/in/rasel-rana430/'"
           />
           <img
             src="./assets/github.png"
             alt="My Github profile"
             class="icon"
-            onclick="location.href='https://github.com/'"
+            onclick="location.href='https:/github.com/raseltpi30'"
           />
         </div>
       </div>
@@ -273,13 +274,13 @@
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/'"
+                onclick="location.href='https:/github.com/raseltpi30/portfolio-template'"
               >
                 Github
               </button>
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/'"
+                onclick="location.href='https:/raseltpi30.github.io/portfolio-template/'"
               >
                 Live Demo
               </button>
@@ -352,7 +353,7 @@
             alt="Email icon"
             class="icon contact-icon email-icon"
           />
-          <p><a href="mailto:examplemail@gmail.com">Example@gmail.com</a></p>
+          <p><a target="_blank" href="mailto:rasel52530@gmail.com">rasel52530@gmail.com</a></p>
         </div>
         <div class="contact-info-container">
           <img
@@ -360,7 +361,7 @@
             alt="LinkedIn icon"
             class="icon contact-icon"
           />
-          <p><a href="https://www.linkedin.com">LinkedIn</a></p>
+          <p><a target="_blank" href="https://www.linkedin.com/in/rasel-rana430/">LinkedIn</a></p>
         </div>
       </div>
     </section>
