--- a/index.html
+++ b/index.html
@@ -278,11 +278,12 @@
               >
                 Github
               </button>
-              <button
+              <a href="https://raseltpi30.github.io/portfolio-template/" class="btn btn-color-2 project-btn">Live Demo</a>
+              <!-- <button
                 class="btn btn-color-2 project-btn"
                 onclick="location.href='https:/raseltpi30.github.io/portfolio-template/'"
-              >
-                Live Demo
+              > -->
+                
               </button>
             </div>
           </div>
