--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
               >
                 Github
               </button>
-              <a href="https://raseltpi30.github.io/portfolio-template/" class="btn btn-color-2 project-btn">Live Demo</a>
+              <a href="" onclick="location.href='https:/raseltpi30.github.io/portfolio-template/'" class="btn btn-color-2 project-btn">Live Demo</a>
               <!-- <button
                 class="btn btn-color-2 project-btn"
                 onclick="location.href='https:/raseltpi30.github.io/portfolio-template/'"
